--- a/GigHub/GigHub/Views/Home/Index.cshtml
+++ b/GigHub/GigHub/Views/Home/Index.cshtml
@@ -18,11 +18,53 @@
         <div class="details">
             <span class="artist">
                 @gig.Artist.Name
+
             </span>
+
             <span class="genre">
-                @gig.Genre.Name
+                @gig.Genre.Name &nbsp;
             </span>
+            
+            <div class="btn-group">
+                <button data-gig-id="@gig.Id" class="btn btn-default btn-sm pull-left js-toggle-attendance">Going?</button>
+                <button data-artist-id="@gig.ArtistId" class="btn btn-default btn-sm pull-right js-toggle-follow">Follow Artist</button>
+            </div>
         </div>
     </li>
     }
 </ul>
+@section scripts{
+   <script>
+       $(document).ready(function () {
+           $(".js-toggle-attendance").click(function (e) {
+               var button = $(e.target)
+               $.post("/api/attendances", { gigId: button.attr("data-gig-id") })
+                .done(function () {
+                    button
+                        .removeClass("btn.default")
+                        .addClass("btn-info")
+                        .text("Going");
+                   })
+                   .fail(function () {
+                       alert("Something failed!");
+                   })
+           });
+       });
+  
+       $(document).ready(function () {
+           $(".js-toggle-follow").click(function (e) {
+               var button = $(e.target)
+               $.post("/api/follows", { artistId: button.attr("data-artist-id") })
+                   .done(function () {
+                       button
+                           .removeClass("btn.default")
+                           .addClass("btn-info")
+                           .text("Following");
+                   })
+                   .fail(function () {
+                       alert("Something failed!");
+                   })
+           });
+       });
+    </script>
+    }
