--- a/GigHub/GigHub/Views/Gigs/Create.cshtml
+++ b/GigHub/GigHub/Views/Gigs/Create.cshtml
@@ -16,7 +16,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Date)
-        @Html.TextBoxFor(m => m.Date, new { @class = "form-control", placeholder = "e.g. 1 Jan 20 2015" })
+        @Html.TextBoxFor(m => m.Date, new { @class = "form-control", placeholder = "e.g. 20 Jan 2015" })
         @Html.ValidationMessageFor(m => m.Date)
     </div>
     <div class="form-group">
