--- a/GigHub/GigHub/Views/Shared/Gigs.cshtml
+++ b/GigHub/GigHub/Views/Shared/Gigs.cshtml
@@ -1,6 +1,7 @@
 ﻿@model GigHub.ViewModels.GigsViewModel
 @{
     ViewBag.Title = "Home Page";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>@Model.Heading</h1>
