--- a/GigHub/GigHub/Content/site.less
+++ b/GigHub/GigHub/Content/site.less
@@ -130,6 +130,10 @@ body {
     height: 44px;
     -ms-border-radius: 9px;
     border-radius: 9px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: none;
+    transition: none;
 
     &:focus {
         border-color: #2196f3;
@@ -229,4 +233,8 @@ body {
             border-bottom: none;
         }
     }
+}
+
+#searchGigs {
+    width: 300px;
 }
