--- a/GigHub/GigHub/Views/Shared/Gigs.cshtml
+++ b/GigHub/GigHub/Views/Shared/Gigs.cshtml
@@ -30,7 +30,9 @@
         </div>
         <div class="details">
             <span class="artist">
-                <a href="@Url.Action("Details", "Gigs", new { gig.Id })">@gig.Artist.Name</a>
+                <a href="@Url.Action("Details", "Gigs", new {id = gig.Id })">
+                    @gig.Artist.Name
+                </a>
 
                 @if (gig.IsCanceled)
                 {
@@ -47,7 +49,11 @@
             </span>
             @if (Model.ShowActions && !gig.IsCanceled)
             {
-                <button data-gig-id="@gig.Id" class="btn btn-default btn-sm pull-right js-toggle-attendance">Going?</button>
+                <button data-gig-id="@gig.Id" class="btn 
+                        @(Model.Attendances.Contains(gig.Id) ? "btn-info" : "btn-default")
+                        btn-sm pull-right js-toggle-attendance">
+                    @(Model.Attendances.Contains(gig.Id) ? "Going" : "Going?")
+                </button>
             }
         </div>
     </li>
@@ -57,17 +63,34 @@
    <script>
        $(document).ready(function () {
            $(".js-toggle-attendance").click(function (e) {
-               var button = $(e.target)
-               $.post("/api/attendances", { gigId: button.attr("data-gig-id") })
-                .done(function () {
-                    button
-                        .removeClass("btn.default")
-                        .addClass("btn-info")
-                        .text("Going");
+               var button = $(e.target);
+               if (button.hasClass("btn-default")) {
+                   $.post("/api/attendances", { gigId: button.attr("data-gig-id") })
+                       .done(function () {
+                           button
+                               .removeClass("btn.default")
+                               .addClass("btn-info")
+                               .text("Going");
+                       })
+                       .fail(function () {
+                           alert("Something failed!");
+                       });
+               } else {
+                   $.ajax({
+                       url: "/api/attendances/" + button.attr("data-gig-id"),
+                       method: "DELETE"
                    })
-                   .fail(function () {
-                       alert("Something failed!");
-                   })
+                       .done(function () {
+                           button
+                               .removeClass("btn-info")
+                               .addClass("btn-default")
+                               .text("Going?");
+                       })
+                       .fail(function () {
+                           alert("Something has failed!")
+                       });
+               }
+              
            });
        });
   
