--- a/GigHub/GigHub/Views/Shared/Gigs.cshtml
+++ b/GigHub/GigHub/Views/Shared/Gigs.cshtml
@@ -16,7 +16,7 @@
         </div>
     </div>
 }
-<ul class="gigs voffset4">
+<ul class="gigs voffset4" id="gigs">
     @foreach (var gig in Model.UpcomingGigs)
     {
     <li>
@@ -38,11 +38,6 @@
                 {
                     <span class="label label-warning">Canceled</span>
                 }
-
-                @if (Model.ShowActions)
-                {
-                    <button data-user-id="@gig.ArtistId" class="btn btn-link btn-sm pull-right js-toggle-follow">Follow</button>
-                }
             </span>
             <span class="genre">
                 @gig.Genre.Name
@@ -61,53 +56,9 @@
 </ul>
 @section scripts{
    <script>
-       $(document).ready(function () {
-           $(".js-toggle-attendance").click(function (e) {
-               var button = $(e.target);
-               if (button.hasClass("btn-default")) {
-                   $.post("/api/attendances", { gigId: button.attr("data-gig-id") })
-                       .done(function () {
-                           button
-                               .removeClass("btn.default")
-                               .addClass("btn-info")
-                               .text("Going");
-                       })
-                       .fail(function () {
-                           alert("Something failed!");
-                       });
-               } else {
-                   $.ajax({
-                       url: "/api/attendances/" + button.attr("data-gig-id"),
-                       method: "DELETE"
-                   })
-                       .done(function () {
-                           button
-                               .removeClass("btn-info")
-                               .addClass("btn-default")
-                               .text("Going?");
-                       })
-                       .fail(function () {
-                           alert("Something has failed!")
-                       });
-               }
-              
-           });
-       });
-  
-       $(document).ready(function () {
-           $(".js-toggle-follow").click(function (e) {
-               var button = $(e.target)
-               $.post("/api/follows", { followeeId: button.attr("data-user-id") })
-                   .done(function () {
-                       button
-                           .removeClass("btn.default")
-                           .addClass("btn-info")
-                           .text("Following");
-                   })
-                   .fail(function () {
-                       alert("Something failed!");
-                   })
-           });
+       $(document).ready(function ()
+       {
+           GigsController.init("#gigs");
        });
     </script>
     }
